--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/logo"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.GreenQuest"
@@ -23,7 +23,11 @@
         <activity
             android:name=".SignUp"
             android:exported="true">
+        </activity>
 
+        <activity
+            android:name=".Home"
+            android:exported="true">
         </activity>
 
     </application>
