--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,9 @@
         android:theme="@style/Theme.GreenQuest"
         tools:targetApi="31">
         <activity
+            android:name=".PracticeActivity"
+            android:exported="false" />
+        <activity
             android:name=".LearnActivity"
             android:exported="false" />
         <activity
@@ -30,7 +33,7 @@
             android:name=".SignUp"
             android:exported="true" />
         <activity
-            android:name=".Home"
+            android:name=".HomeActivity"
             android:exported="true" />
     </application>
 
